add functions for "move_to_position"
