# src/docs/swagger.json
@@ -446,8 +446,8 @@
                     "401": {
                         "description": "Unauthorized"
                     },
-                    "403": {
-                        "description": "Forbidden"
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             },
@@ -981,6 +981,9 @@
                 "name": {
                     "type": "string"
                 },
+                "position": {
+                    "type": "integer"
+                },
                 "project_id": {
                     "type": "integer"
                 }
@@ -1110,6 +1113,9 @@
                 "completed": {
                     "type": "integer"
                 },
+                "overdue": {
+                    "type": "integer"
+                },
                 "total": {
                     "type": "integer"
                 }
@@ -1155,6 +1161,9 @@
                 "name": {
                     "type": "string"
                 },
+                "position": {
+                    "type": "integer"
+                },
                 "status": {
                     "type": "boolean"
                 },
@@ -1190,6 +1199,9 @@
                 "name": {
                     "type": "string"
                 },
+                "position": {
+                    "type": "integer"
+                },
                 "status": {
                     "type": "boolean"
                 },
@@ -1200,14 +1212,15 @@
         },
         "domain.UpdateColumnInput": {
             "type": "object",
-            "required": [
-                "name"
-            ],
             "properties": {
                 "name": {
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 3
+                },
+                "position": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -1252,6 +1265,10 @@
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 3
+                },
+                "position": {
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "status": {
                     "type": "boolean"
